fix: safety_checker, and feature_extractor

--- a/sd-colab-toolkit.ipynb
+++ b/sd-colab-toolkit.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +40,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title ## 1. Install Dependencies\n",
+        "#@title ## 1.1 Install Dependencies\n",
         "import os\n",
         "\n",
         "%cd /content/\n",
@@ -87,23 +88,29 @@
         "#@markdown ### Available Model\n",
         "#@markdown Select one of available model to download:\n",
         "\n",
-        "modelUrl = [\"https://huggingface.co/Linaqruf/personal_backup/resolve/main/animeckpt/model-pruned.ckpt\", \\\n",
+        "modelUrl = [\"https://huggingface.co/Linaqruf/personal_backup/resolve/main/animeckpt/model-latest.ckpt\", \\\n",
+        "            \"https://huggingface.co/Linaqruf/personal_backup/resolve/main/animeckpt/model-pruned.ckpt\", \\\n",
+        "            \"https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/Anything-V3.0.ckpt\", \\\n",
         "            \"https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/Anything-V3.0-pruned.ckpt\", \\\n",
         "            \"https://huggingface.co/Linaqruf/anything-v3-better-vae/resolve/main/any-v3-fp32-better-vae.ckpt\", \\\n",
+        "            \"https://huggingface.co/Rasgeath/self_made_sauce/resolve/main/Kani-anime.ckpt\", \\\n",
         "            \"https://huggingface.co/Rasgeath/self_made_sauce/resolve/main/Kani-anime-pruned.ckpt\", \\\n",
         "            \"https://huggingface.co/hesw23168/SD-Elysium-Model/resolve/main/Elysium_Anime_V2.ckpt\", \\\n",
         "            \"https://huggingface.co/prompthero/openjourney-v2/resolve/main/openjourney-v2.ckpt\", \\\n",
         "            \"https://huggingface.co/dreamlike-art/dreamlike-diffusion-1.0/resolve/main/dreamlike-diffusion-1.0.ckpt\", \\\n",
         "            \"https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.ckpt\"]\n",
-        "modelList = [\"Animefull-final-pruned\", \\\n",
+        "modelList = [\"Animefull-final-latest\", \\\n",
+        "             \"Animefull-final-pruned\", \\\n",
         "             \"Anything-V3\", \\\n",
+        "             \"Anything-V3-pruned\", \\\n",
         "             \"Anything-V3-better-vae\", \\\n",
         "             \"Kani-anime\", \\\n",
+        "             \"Kani-anime-pruned\", \\\n",
         "             \"Elysium-anime-V2\", \\\n",
         "             \"OpenJourney-V2\", \\\n",
         "             \"Dreamlike-diffusion-V1-0\", \\\n",
         "             \"Stable-Diffusion-v1-5\"]\n",
-        "modelName = \"Animefull-final-pruned\" #@param [\"Animefull-final-pruned\", \"Anything-V3\", \"Anything-V3-better-vae\", \"Kani-anime\", \"Elysium-anime-V2\", \"OpenJourney-V2\", \"Dreamlike-diffusion-V1-0\", \"Stable-Diffusion-v1-5\"]\n",
+        "modelName = \"Anything-V3\" #@param [\"Animefull-final-latest\", \"Animefull-final-pruned\", \"Anything-V3\", \"Anything-V3-pruned\", \"Anything-V3-better-vae\", \"Kani-anime\", \"Kani-anime-pruned\", \"Elysium-anime-V2\", \"OpenJourney-V2\", \"Dreamlike-diffusion-V1-0\", \"Stable-Diffusion-v1-5\"]\n",
         "\n",
         "installModels.append((modelName, modelUrl[modelList.index(modelName)]))\n",
         "\n",
@@ -136,7 +143,7 @@
         "\n",
         "#@markdown ### Custom model\n",
         "modelList = []\n",
-        "modelUrl = \"https://huggingface.co/WarriorMama777/OrangeMixs/blob/main/AbyssOrangeMix2/AbyssOrangeMix2_sfw.ckpt\" #@param {'type': 'string'}\n",
+        "modelUrl = \"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/AbyssOrangeMix2/AbyssOrangeMix2_sfw.ckpt\" #@param {'type': 'string'}\n",
         "modelUrl2 = \"\" #@param {'type': 'string'}\n",
         "modelUrl3 = \"\" #@param {'type': 'string'}\n",
         "modelUrl4 = \"\" #@param {'type': 'string'}\n",
@@ -183,7 +190,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title ## 1.3. Download VAE\n",
+        "#@title ## 1.4. Download VAE\n",
         "%cd /content/\n",
         "\n",
         "installVae = []\n",
@@ -234,18 +241,69 @@
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "\n",
         "#@title ## 2.1. Model Pruner\n",
         "\n",
         "%cd /content/sd-notebook-collection/script\n",
         "\n",
+        "#@markdown Convert to Float16\n",
         "fp16 = False #@param {'type':'boolean'}\n",
+        "#@markdown Use EMA for weights\n",
         "ema = False #@param {'type':'boolean'}\n",
+        "#@markdown Strip CLIP weights\n",
         "no_clip = False #@param {'type':'boolean'}\n",
+        "#@markdown Strip VAE weights\n",
         "no_vae = False #@param {'type':'boolean'}\n",
-        "input = \"/content/models/AbyssOrangeMix2_sfw.ckpt\" #@param {'type' : 'string'}\n",
-        "output = \"/content/models/AbyssOrangeMix2_sfw-pruned.ckpt\" #@param {'type' : 'string'}\n",
+        "#@markdown Strip depth model weights\n",
+        "no_depth = False #@param {'type':'boolean'}\n",
+        "#@markdown Strip UNet weights\n",
+        "no_unet = False #@param {'type':'boolean'}\n",
+        "#@markdown You need to input model ends with `.ckpt`, because `.safetensors` model won't work.\n",
         "\n",
-        "!python3 prune.py \"{input}\" {output} {'--fp16' if fp16 else ''} {'--ema' if ema else ''} {'--no-clip' if no_clip else ''} {'--no-vae' if no_vae else ''}"
+        "input = \"/content/models/Anything-V3.ckpt\" #@param {'type' : 'string'}\n",
+        "\n",
+        "\n",
+        "# Notify the user that the model is being loaded\n",
+        "print(f\"Loading model from {input}\")\n",
+        "\n",
+        "input_path = os.path.dirname(input)\n",
+        "base_name = os.path.basename(input)\n",
+        "output_name = base_name.split('.')[0]\n",
+        "# Notify the user of the arguments being used\n",
+        "if fp16:\n",
+        "    print(\"Converting to float16\")\n",
+        "    output_name += '-fp16'\n",
+        "if ema:\n",
+        "    print(\"Using EMA for weights\")\n",
+        "    output_name += '-ema'\n",
+        "if no_clip:\n",
+        "    print(\"Stripping CLIP weights\")\n",
+        "    output_name += '-no-clip'\n",
+        "if no_vae:\n",
+        "    print(\"Stripping VAE weights\")\n",
+        "    output_name += '-no-vae'\n",
+        "if no_depth:\n",
+        "    print(\"Stripping depth model weights\")\n",
+        "    output_name += '-no-depth'\n",
+        "if no_unet:\n",
+        "    print(\"Stripping UNet weights\")\n",
+        "    output_name += '-no-unet'\n",
+        "output_name += '-pruned'\n",
+        "output_path = os.path.join(input_path, output_name + '.ckpt')\n",
+        "\n",
+        "\n",
+        "!python3 prune.py \"{input}\" \\\n",
+        "  \"{output_path}\" \\\n",
+        "  {'--fp16' if fp16 else ''} \\\n",
+        "  {'--ema' if ema else ''} \\\n",
+        "  {'--no-clip' if no_clip else ''} \\\n",
+        "  {'--no-vae' if no_vae else ''} \\\n",
+        "  {'--no-depth' if no_depth else ''} \\\n",
+        "  {'--no-unet' if no_unet else ''}\n",
+        "\n",
+        "# Notify the user of the output file location\n",
+        "print(f\"Saving pruned model to {output_path}\")"
       ],
       "metadata": {
         "cellView": "form",
@@ -262,11 +320,11 @@
         "%cd /content/sd-notebook-collection/script/\n",
         "\n",
         "#@markdown ## Define model path\n",
-        "weight = \"/content/models/AbyssOrangeMix2_sfw-pruned\" #@param {'type': 'string'}\n",
+        "weight = \"/content/models/Anything-V3.ckpt\" #@param {'type': 'string'}\n",
         "weight_dir = os.path.dirname(weight)\n",
         "base_name = os.path.splitext(os.path.basename(weight))[0]\n",
         "\n",
-        "convert = \"diffusers_to_ckpt_safetensors\" #@param [\"diffusers_to_ckpt_safetensors\", \"ckpt_safetensors_to_diffusers\"] {'allow-input': false}\n",
+        "convert = \"ckpt_safetensors_to_diffusers\" #@param [\"diffusers_to_ckpt_safetensors\", \"ckpt_safetensors_to_diffusers\"] {'allow-input': false}\n",
         "#@markdown ___\n",
         "#@markdown ## Conversion Config\n",
         "#@markdown ___\n",
@@ -280,15 +338,14 @@
         "version = \"--v1\" #@param [\"--v1\",\"--v2\"] {'allow-input': false}\n",
         "diffusers = os.path.join(weight_dir, base_name)\n",
         "\n",
-        "\n",
         "#@markdown Additional file for diffusers\n",
         "feature_extractor = True #@param {'type': 'boolean'}\n",
         "safety_checker = True #@param {'type': 'boolean'}\n",
         "\n",
         "if use_safetensors:\n",
-        "    checkpoint = str(weight_dir)+\"/model.safetensors\"\n",
+        "    checkpoint = str(diffusers)+\".safetensors\"\n",
         "else:\n",
-        "    checkpoint = str(weight_dir)+\"/model.ckpt\"\n",
+        "    checkpoint = str(diffusers)+\".ckpt\"\n",
         "\n",
         "if version == \"--v1\":\n",
         "  reference_model = \"runwayml/stable-diffusion-v1-5\"\n",
@@ -339,14 +396,32 @@
         "#@title 2.3. Replace VAE of Existing Model \n",
         "%cd /content/sd-notebook-collection/script\n",
         "\n",
-        "target_model = \"/content/models/AbyssOrangeMix2_sfw.ckpt\" #@param {'type': 'string'}\n",
+        "#@markdown You need to input model ends with `.ckpt`, because `.safetensors` model won't work.\n",
+        "\n",
+        "target_model = \"/content/models/Anything-V3.ckpt\" #@param {'type': 'string'}\n",
         "target_vae = \"/content/vae/anime.vae.pt\" #@param {'type': 'string'}\n",
-        "output_model = \"/content/output/AbyssOrangeMix2.ckpt\" #@param {'type': 'string'}\n",
+        "\n",
+        "# get the base file name and directory\n",
+        "base_name = os.path.basename(target_model)\n",
+        "base_dir = os.path.dirname(target_model)\n",
+        "\n",
+        "# get the file name without extension\n",
+        "file_name = os.path.splitext(base_name)[0]\n",
+        "\n",
+        "# create the new file name\n",
+        "new_file_name = file_name + \"-vae-swapped\"\n",
+        "\n",
+        "# get the file extension\n",
+        "file_ext = os.path.splitext(base_name)[1]\n",
+        "\n",
+        "# create the output file path\n",
+        "output_model = os.path.join(base_dir, new_file_name + file_ext)\n",
         "\n",
         "!python merge_vae.py \\\n",
         "  {target_model} \\\n",
         "  {target_vae} \\\n",
-        "  {output_model}\n"
+        "  {output_model}\n",
+        "\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -361,7 +436,7 @@
         "#@title 2.4. Convert CKPT to Safetensors\n",
         "%cd /content/sd-notebook-collection/script\n",
         "\n",
-        "target_model = \"/content/models/AbyssOrangeMix2_sfw.ckpt\" #@param {'type': 'string'}\n",
+        "target_model = \"/content/models/Anything-V3-vae-swapped.ckpt\" #@param {'type': 'string'}\n",
         "\n",
         "!python convert_to_safetensors.py \\\n",
         "  --input-model {target_model} \\\n",
@@ -392,7 +467,7 @@
         "#@markdown 1. Of course, you need a Huggingface account first.\n",
         "#@markdown 2. To create a huggingface token, go to [this link](https://huggingface.co/settings/tokens), then `create new token` or copy available token with the `Write` role.\n",
         "\n",
-        "write_token = \"YOUR-TOKEN-HERE\" #@param {type:\"string\"}\n",
+        "write_token = \"your-write-token-here\" #@param {type:\"string\"}\n",
         "login(write_token, add_to_git_credential=True)"
       ],
       "metadata": {
@@ -412,8 +487,8 @@
         "api = HfApi()\n",
         "user = api.whoami(write_token)\n",
         "\n",
-        "#@markdown #### If your model/dataset repo didn't exist, it will automatically create your repo.\n",
-        "model_name = \"test-model\" #@param{type:\"string\"}\n",
+        "#@markdown #### If your model repo didn't exist, it will automatically create your repo.\n",
+        "model_name = \"Anything-V3-better-vae\" #@param{type:\"string\"}\n",
         "make_this_model_private = False #@param{type:\"boolean\"}\n",
         "clone_with_git = True #@param{type:\"boolean\"}\n",
         "\n",
@@ -469,20 +544,27 @@
         "api = HfApi()\n",
         "\n",
         "#@markdown #### This will be uploaded to model repo\n",
-        "model_path = \"/content/fine_tune/output/Untitled Folder\" #@param {type :\"string\"}\n",
+        "#@markdown You can't upload 7G model using `hf_hub` in Colab, please use `!git commit` cell below\n",
+        "\n",
+        "model_path = \"/content/models/Anything-V3-vae-swapped.safetensors\" #@param {type :\"string\"}\n",
+        "path_in_repo = \"Anything-V3-vae-swapped.safetensors\" #@param {type :\"string\"}\n",
         "\n",
         "is_diffusers_model = False #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown #### Other Information\n",
-        "commit_message = \"feat: upload 2 epoch and the last-state\" #@param {type :\"string\"}\n",
+        "commit_message = \"feat: upload Anything-V3-vae-swapped.safetensors\" #@param {type :\"string\"}\n",
+        "\n",
         "\n",
         "if model_path != \"\":\n",
         "  path_obj = Path(model_path)\n",
         "  trained_model = path_obj.parts[-1]\n",
         "\n",
-        "  if model_path.endswith(\".ckpt\") or model_path.endswith(\".safetensor\") or model_path.endswith(\".pt\"):\n",
+        "  if model_path.endswith(\".ckpt\") or model_path.endswith(\".safetensors\") or model_path.endswith(\".pt\"):\n",
         "    print(f\"Uploading {trained_model} to https://huggingface.co/\"+model_repo)\n",
         "    print(f\"Please wait...\")\n",
+        "    \n",
+        "    if path_in_repo != \"\":\n",
+        "      path_in_repo = trained_model\n",
         "\n",
         "    api.upload_file(\n",
         "        path_or_fileobj=model_path,\n",
@@ -530,27 +612,22 @@
         "#@title ### 3.3.2. Or Commit using Git \n",
         "%cd /content/\n",
         "\n",
-        "#@markdown Tick which repo you want to commit\n",
-        "commit_model = True #@param {'type': 'boolean'}\n",
-        "\n",
         "#@markdown Set **git commit identity**\n",
         "email = \"your-email\" #@param {'type': 'string'}\n",
         "name = \"your-username\" #@param {'type': 'string'}\n",
         "#@markdown Set **commit message**\n",
-        "commit_m = \"feat: upload prototype model\" #@param {'type': 'string'}\n",
+        "commit_m = \"feat: upload Anything-V3-vae-swapped.safetensors\" #@param {'type': 'string'}\n",
+        "\n",
+        "%cd /content/{model_name}\n",
         "\n",
         "!git lfs install\n",
-        "\n",
+        "!huggingface-cli lfs-enable-largefiles .\n",
         "!git config --global user.email \"{email}\"\n",
         "!git config --global user.name \"{name}\"\n",
-        "\n",
-        "if commit_model:\n",
-        "  %cd /content/{model_name}\n",
-        "  !huggingface-cli lfs-enable-largefiles .\n",
-        "  !git add .\n",
-        "  !git lfs help smudge\n",
-        "  !git commit -m \"{commit_m}\"\n",
-        "  !git push\n"
+        "!git add .\n",
+        "!git lfs help smudge\n",
+        "!git commit -m \"{commit_m}\"\n",
+        "!git push\n"
       ],
       "metadata": {
         "cellView": "form",
