--- a/sd-colab-toolkit.ipynb
+++ b/sd-colab-toolkit.ipynb
@@ -57,6 +57,7 @@
         "\n",
         "#@markdown This will install required Python packages\n",
         "!pip install --upgrade -r requirements.txt\n",
+        "!pip install --upgrade --no-cache-dir gdown\n",
         "!apt install liblz4-tool aria2\n",
         "\n",
         "if not os.path.exists('/content/models'):\n",
@@ -93,6 +94,9 @@
         "            \"https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/Anything-V3.0.ckpt\", \\\n",
         "            \"https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/Anything-V3.0-pruned.ckpt\", \\\n",
         "            \"https://huggingface.co/Linaqruf/anything-v3-better-vae/resolve/main/any-v3-fp32-better-vae.ckpt\", \\\n",
+        "            \"https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.0.ckpt\", \\\n",
+        "            \"https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.0-pruned.ckpt\", \\\n",
+        "            \"https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.5-pruned.ckpt\", \\\n",
         "            \"https://huggingface.co/Rasgeath/self_made_sauce/resolve/main/Kani-anime.ckpt\", \\\n",
         "            \"https://huggingface.co/Rasgeath/self_made_sauce/resolve/main/Kani-anime-pruned.ckpt\", \\\n",
         "            \"https://huggingface.co/hesw23168/SD-Elysium-Model/resolve/main/Elysium_Anime_V2.ckpt\", \\\n",
@@ -104,13 +108,16 @@
         "             \"Anything-V3\", \\\n",
         "             \"Anything-V3-pruned\", \\\n",
         "             \"Anything-V3-better-vae\", \\\n",
+        "             \"Anything-V4\", \\\n",
+        "             \"Anything-V4-pruned\", \\\n",
+        "             \"Anything-V4-5-pruned\", \\\n",
         "             \"Kani-anime\", \\\n",
         "             \"Kani-anime-pruned\", \\\n",
         "             \"Elysium-anime-V2\", \\\n",
         "             \"OpenJourney-V2\", \\\n",
         "             \"Dreamlike-diffusion-V1-0\", \\\n",
         "             \"Stable-Diffusion-v1-5\"]\n",
-        "modelName = \"Anything-V3\" #@param [\"Animefull-final-latest\", \"Animefull-final-pruned\", \"Anything-V3\", \"Anything-V3-pruned\", \"Anything-V3-better-vae\", \"Kani-anime\", \"Kani-anime-pruned\", \"Elysium-anime-V2\", \"OpenJourney-V2\", \"Dreamlike-diffusion-V1-0\", \"Stable-Diffusion-v1-5\"]\n",
+        "modelName = \"Anything-V4\" #@param [\"Animefull-final-latest\", \"Animefull-final-pruned\", \"Anything-V3\", \"Anything-V3-pruned\", \"Anything-V3-better-vae\", \"Anything-V4\", \"Anything-V4-pruned\", \"Anything-V4-5-pruned\",\"Kani-anime\", \"Kani-anime-pruned\", \"Elysium-anime-V2\", \"OpenJourney-V2\", \"Dreamlike-diffusion-V1-0\", \"Stable-Diffusion-v1-5\"]\n",
         "\n",
         "installModels.append((modelName, modelUrl[modelList.index(modelName)]))\n",
         "\n",
@@ -355,33 +362,33 @@
         "if convert == \"diffusers_to_ckpt_safetensors\":\n",
         "    if not weight.endswith(\".ckpt\") or weight.endswith(\".safetensors\"):\n",
         "        !python convert_diffusers20_original_sd.py \\\n",
-        "            {weight} \\\n",
-        "            {checkpoint} \\\n",
+        "            \"{weight}\" \\\n",
+        "            \"{checkpoint}\"\" \\\n",
         "            {save_precision}\n",
         "\n",
         "else:    \n",
         "    !python convert_diffusers20_original_sd.py \\\n",
-        "        {weight} \\\n",
-        "        {diffusers} \\\n",
+        "        \"{weight}\" \\\n",
+        "        \"{diffusers}\" \\\n",
         "        {version} \\\n",
         "        --reference_model {reference_model} \n",
-        " \n",
+        "\n",
         "    url1 = \"https://huggingface.co/CompVis/stable-diffusion-safety-checker/resolve/main/preprocessor_config.json\"\n",
         "    url2 = \"https://huggingface.co/CompVis/stable-diffusion-safety-checker/resolve/main/config.json\"\n",
         "    url3 = \"https://huggingface.co/CompVis/stable-diffusion-safety-checker/resolve/main/pytorch_model.bin\"\n",
         "\n",
         "    if feature_extractor == True:\n",
-        "      if not os.path.exists(f'{diffusers}/feature_extractor'):\n",
-        "        os.makedirs(f'{diffusers}/feature_extractor')\n",
+        "      if not os.path.exists(str(diffusers)+'/feature_extractor'):\n",
+        "        os.makedirs(str(diffusers)+'/feature_extractor')\n",
         "      \n",
-        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d f'{diffusers}/feature_extractor' -Z {url1}\n",
+        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d '{diffusers}/feature_extractor' -Z {url1}\n",
         "\n",
         "    if safety_checker == True:\n",
-        "      if not os.path.exists(f'{diffusers}/safety_checker'):\n",
-        "        os.makedirs(f'{diffusers}/safety_checker')\n",
+        "      if not os.path.exists(str(diffusers)+'/safety_checker'):\n",
+        "        os.makedirs(str(diffusers)+'/safety_checker')\n",
         "      \n",
-        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d f'{diffusers}/safety_checker' -Z {url2}\n",
-        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d f'{diffusers}/safety_checker' -Z {url3}\n"
+        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d '{diffusers}/safety_checker' -Z {url2}\n",
+        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d '{diffusers}/safety_checker' -Z {url3}\n"
       ],
       "metadata": {
         "cellView": "form",
