--- a/Anything-V3-Mirroring.ipynb
+++ b/Anything-V3-Mirroring.ipynb
@@ -98,9 +98,10 @@
         "diffusers_format = os.path.join(models_path, base_name)\n",
         "\n",
         "def download(url):\n",
+        "  base_name= os.path.basename(url)\n",
         "  hf_token = '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' \n",
         "  user_header = f\"\\\"Authorization: Bearer {hf_token}\\\"\"\n",
-        "  !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d models \"{url}\"\n",
+        "  !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d models -o {base_name} \"{url}\"\n",
         "\n",
         "def download_checkpoint():\n",
         "  if Anything_V_3_0_Full:\n",
@@ -184,14 +185,14 @@
         "\n",
         "#@markdown You can get your huggingface token from [this link](https://huggingface.co/settings/tokens), then `create new token` or copy available token with the `Write` role.\n",
         "\n",
-        "write_token = \"\" #@param {type:\"string\"}\n",
+        "write_token = \"your-write-token\" #@param {type:\"string\"}\n",
         "login(write_token, add_to_git_credential=True)\n",
         "\n",
         "user = api.whoami(write_token)\n",
         "\n",
         "#@markdown ### Define your Huggingface Repo\n",
         "#@markdown If your model repo didn't exist, it will automatically create your repo.\n",
-        "model_name = \"anything-v3-mirror\" #@param{type:\"string\"}\n",
+        "model_name = \"anything-v3.0-mirror\" #@param{type:\"string\"}\n",
         "make_this_model_private = True #@param{type:\"boolean\"}\n",
         "\n",
         "model_repo = user['name']+\"/\"+model_name.strip()\n",
@@ -245,6 +246,8 @@
         "    upload_model(fp16_model_path, False)\n",
         "  if diffusers_format:\n",
         "    upload_model(diffusers_format, True)\n",
+        "  if Anything_V_3_0_Full:\n",
+        "    upload_model(full_model_path, False)\n",
         "\n",
         "upload()\n"
       ],
@@ -273,21 +276,14 @@
         "\n",
         "#@markdown Unfortunately you can't upload 7G model to huggingface with `hf_hub` using Colab Free, because it will crash the colab and automatically restart the runtime. So we will use git commit as alternative.\n",
         "repo = f\"/content/{model_name}\"\n",
-        "shutil.move(full_model_path, repo)\n",
+        "# shutil.move(full_model_path, repo)\n",
         "#@markdown Set **git commit identity**\n",
         "email = \"your-email-here\" #@param {'type': 'string'}\n",
         "name = \"your-username-here\" #@param {'type': 'string'}\n",
         "#@markdown Set **commit message**\n",
         "commit_m = f\"feat: upload {full_basename}\"\n",
         "\n",
-        "%cd /content/{model_name}\n",
-        "!git lfs install\n",
-        "!huggingface-cli lfs-enable-largefiles .\n",
-        "!git config --global user.email \"{email}\"\n",
-        "!git config --global user.name \"{name}\"\n",
-        "!git add .\n",
-        "!git commit -m \"{commit_m}\"\n",
-        "!git push\n"
+        "\n"
       ],
       "metadata": {
         "cellView": "form",
