--- a/sd-colab-toolkit.ipynb
+++ b/sd-colab-toolkit.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -150,7 +149,7 @@
         "\n",
         "#@markdown ### Custom model\n",
         "modelList = []\n",
-        "modelUrl = \"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/AbyssOrangeMix2/AbyssOrangeMix2_sfw.ckpt\" #@param {'type': 'string'}\n",
+        "modelUrl = \"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix2/AbyssOrangeMix2_sfw.ckpt\" #@param {'type': 'string'}\n",
         "modelUrl2 = \"\" #@param {'type': 'string'}\n",
         "modelUrl3 = \"\" #@param {'type': 'string'}\n",
         "modelUrl4 = \"\" #@param {'type': 'string'}\n",
@@ -165,18 +164,21 @@
         "    !apt install -y -qq aria2\n",
         "\n",
         "def install(url):\n",
+        "\n",
+        "\n",
         "  if url.startswith(\"https://drive.google.com\"):\n",
         "    !gdown --fuzzy  \"{url}\"\n",
         "  elif url.startswith(\"magnet:?\"):\n",
         "    install_aria()\n",
         "    !aria2c --summary-interval=10 -c -x 10 -k 1M -s 10 \"{url}\"\n",
         "  elif url.startswith(\"https://huggingface.co/\"):\n",
+        "    base_name = os.path.basename(url)\n",
         "    if '/blob/' in url:\n",
         "      url = url.replace('/blob/', '/resolve/')\n",
         "\n",
         "    hf_token = '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'\n",
         "    user_header = f\"\\\"Authorization: Bearer {hf_token}\\\"\"\n",
-        "    !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d /content/models -Z \"{url}\"\n",
+        "    !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d /content/models -o \"{base_name}\" \"{url}\"\n",
         "  else:\n",
         "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/models -Z \"{url}\"\n",
         "\n",
@@ -204,7 +206,7 @@
         "#@markdown ### Available VAE\n",
         "#@markdown Select one of the VAEs to download, select `none` for not download VAE:\n",
         "vaeUrl = [\"\", \\\n",
-        "          \"https://huggingface.co/Linaqruf/personal_backup/resolve/main/animevae/animevae.pt\", \\\n",
+        "          \"https://huggingface.co/Linaqruf/personal-backup/resolve/main/vae/animevae.pt\", \\\n",
         "          \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\", \\\n",
         "          \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\"]\n",
         "vaeList = [\"none\", \\\n",
@@ -268,7 +270,7 @@
         "no_unet = False #@param {'type':'boolean'}\n",
         "#@markdown You need to input model ends with `.ckpt`, because `.safetensors` model won't work.\n",
         "\n",
-        "input = \"/content/models/Anything-V3.ckpt\" #@param {'type' : 'string'}\n",
+        "input = \"/content/models/AbyssOrangeMix2_sfw.ckpt\" #@param {'type' : 'string'}\n",
         "\n",
         "\n",
         "# Notify the user that the model is being loaded\n",
@@ -327,7 +329,7 @@
         "%cd /content/sd-notebook-collection/script/\n",
         "\n",
         "#@markdown ## Define model path\n",
-        "weight = \"/content/models/Anything-V3.ckpt\" #@param {'type': 'string'}\n",
+        "weight = \"/content/models/AbyssOrangeMix2_sfw-pruned.ckpt\" #@param {'type': 'string'}\n",
         "weight_dir = os.path.dirname(weight)\n",
         "base_name = os.path.splitext(os.path.basename(weight))[0]\n",
         "\n",
@@ -381,14 +383,14 @@
         "      if not os.path.exists(str(diffusers)+'/feature_extractor'):\n",
         "        os.makedirs(str(diffusers)+'/feature_extractor')\n",
         "      \n",
-        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d '{diffusers}/feature_extractor' -Z {url1}\n",
+        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d '{diffusers}/feature_extractor' -o 'preprocessor_config.json' {url1}\n",
         "\n",
         "    if safety_checker == True:\n",
         "      if not os.path.exists(str(diffusers)+'/safety_checker'):\n",
         "        os.makedirs(str(diffusers)+'/safety_checker')\n",
         "      \n",
-        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d '{diffusers}/safety_checker' -Z {url2}\n",
-        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d '{diffusers}/safety_checker' -Z {url3}\n"
+        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d '{diffusers}/safety_checker' -o 'config.json' {url2}\n",
+        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d '{diffusers}/safety_checker' -o 'pytorch_model.bin' {url3}\n"
       ],
       "metadata": {
         "cellView": "form",
