fix: upgrade pillow version

--- a/haramfu-remastered.ipynb
+++ b/haramfu-remastered.ipynb
@@ -119,7 +119,7 @@
         "\n",
         "    %cd /content/haramfu\n",
         "    !pip install -q -r requirements.txt\n",
-        "    !pip install -q safetensors pyngrok pytorch_lightning==1.7.7\n",
+        "    !pip install -q safetensors pyngrok pytorch_lightning==1.7.7 Pillow==9.1.0\n",
         "    del cap \n",
         "  print(\"\\r🚀 Finished unpacking.\\n\", end='', flush=True)\n",
         "  \n",
@@ -179,7 +179,8 @@
         "\n",
         "#@markdown ### Custom model\n",
         "#@markdown <small><font color=gray> **HINT**: check for models in [Civitai](https://civitai.com/) or [Huggingface]()</small><br>\n",
-        "#@markdown <small><font color=gray> **HINT**: indirectly support for `.safetensors`, it will automatically converted to `.ckpt`</small>\n",
+        "#@markdown <small><font color=gray> **HINT**: **LoRA, TI, and Hypernetwork** is not supported, so don't even try to download them</small><br>\n",
+        "#@markdown <small><font color=gray> **HINT**: indirect support for `.safetensors`, downloaded safetensors model will automatically converted to `.ckpt`</small>\n",
         "customUrl = \"\" #@param {'type': 'string'}\n",
         "if customUrl.endswith(\"ckpt\") or customUrl.endswith(\"safetensors\"):\n",
         "  base_name = os.path.splitext(os.path.basename(customUrl))[0]\n",
