--- a/haramfu-remastered.ipynb
+++ b/haramfu-remastered.ipynb
@@ -145,7 +145,6 @@
         "\n",
         "#@markdown ### Available Model\n",
         "\n",
-        "\n",
         "#@markdown Select one of available model to download:\n",
         "\n",
         "modelUrl = [\"\", \\\n",
@@ -176,11 +175,10 @@
         "            \"dpepteahand3\"]\n",
         "modelName = \"pastelmix\"  #@param [\"\", \"animefull-final-pruned\", \"anything-v3-0\", \"anything-v3-2\", \"anything-v4-0\", \"anything-v4.5\", \"pastelmix\", \"AbyssOrangeMix2_nsfw\", \"hitokomoru\", \"Counterfeit-V2.5\", \"KENSHI\", \"Kani-anime\", \"dpepteahand3\"]\n",
         "\n",
-        "\n",
         "#@markdown ### Custom model\n",
         "#@markdown <small><font color=gray> **HINT**: check for models in [Civitai](https://civitai.com/) or [Huggingface]()</small><br>\n",
         "#@markdown <small><font color=gray> **HINT**: **LoRA, TI, and Hypernetwork** is not supported, so don't even try to download them</small><br>\n",
-        "#@markdown <small><font color=gray> **HINT**: indirect support for `.safetensors`, downloaded safetensors model will automatically converted to `.ckpt`</small>\n",
+        "#@markdown <small><font color=gray> **HINT**: indirect support for `.safetensors`, downloaded safetensors model will automatically converted to `.ckpt`</small><br>\n",
         "customUrl = \"\" #@param {'type': 'string'}\n",
         "if customUrl.endswith(\"ckpt\") or customUrl.endswith(\"safetensors\"):\n",
         "  base_name = os.path.splitext(os.path.basename(customUrl))[0]\n",
