fix: small changes

--- a/haramfu_v2.ipynb
+++ b/haramfu_v2.ipynb
@@ -43,7 +43,7 @@
         "# **Haramfu v2**\n",
         "A Customizable N__FU <small><font color=gray>(He-Who-Must-Not-Be-Named)</small></font>\n",
         "\n",
-        "<small><font color=gray>v2.080223 | [For ppl who copied this colab, check updates here](https://colab.research.google.com/drive/1wEa-tS10h4LlDykd87TF5zzpXIIQoCmq)</small></font>\n",
+        "<small><font color=gray>v2.080223 | [For ppl who copied this colab, check updates here](https://colab.research.google.com/github/Linaqruf/sd-notebook-collection/blob/main/haramfu_v2.ipynb)</small></font>\n",
         "\n"
       ],
       "metadata": {
