fix: push some changes for haramfu

--- a/haramfu_v2.ipynb
+++ b/haramfu_v2.ipynb
@@ -174,10 +174,10 @@
         "            \"KENSHI\", \\\n",
         "            \"Kani-anime\", \\\n",
         "            \"dpepteahand3\"]\n",
-        "modelName = \"pastelmix\"  #@param [\"\", \"animefull-final-pruned\", \"anything-v3-0\", \"anything-v3-2\", \"anything-v4-0\", \"anything-v4.5\", \"pastelmix\", \"AbyssOrangeMix2_nsfw\", \"hitokomoru\", \"Counterfeit-V2.5\", \"KENSHI\", \"Kani-anime\", \"dpepteahand3\"]\n",
+        "modelName = \"AbyssOrangeMix2_nsfw\"  #@param [\"\", \"animefull-final-pruned\", \"anything-v3-0\", \"anything-v3-2\", \"anything-v4-0\", \"anything-v4.5\", \"pastelmix\", \"AbyssOrangeMix2_nsfw\", \"hitokomoru\", \"Counterfeit-V2.5\", \"KENSHI\", \"Kani-anime\", \"dpepteahand3\"]\n",
         "\n",
         "#@markdown ### Custom model\n",
-        "#@markdown <small><font color=gray> **HINT**: check for models in [Civitai](https://civitai.com/) or [Huggingface]() </small><br>\n",
+        "#@markdown <small><font color=gray> **HINT**: check for models in [Civitai](https://civitai.com/) or [Huggingface](https://huggingface.co/) </small><br>\n",
         "#@markdown <small><font color=gray> **HINT**: **LoRA, TI, and Hypernetwork** is not supported, so don't even try to download them </small><br>\n",
         "#@markdown <small><font color=gray> **HINT**: indirect support for `.safetensors`, downloaded safetensors model will automatically converted to `.ckpt` </small><br>\n",
         "customUrl = \"\" #@param {'type': 'string'}\n",
