--- a/sd-colab-toolkit.ipynb
+++ b/sd-colab-toolkit.ipynb
@@ -91,7 +91,7 @@
         "\n",
         "#@markdown ### Custom model\n",
         "modelList = []\n",
-        "modelUrl = \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/anything-v3-3.safetensors\" #@param {'type': 'string'}\n",
+        "modelUrl = \"\" #@param {'type': 'string'}\n",
         "modelUrl2 = \"\" #@param {'type': 'string'}\n",
         "modelUrl3 = \"\" #@param {'type': 'string'}\n",
         "modelUrl4 = \"\" #@param {'type': 'string'}\n",
@@ -271,12 +271,12 @@
         "os.chdir(tools_dir)\n",
         "\n",
         "#@markdown ### Conversion Config\n",
-        "model_to_load = \"/content/models/models_dir/hitokomoru-v1-5.safetensors\" #@param {'type': 'string'}\n",
+        "model_to_load = \"\" #@param {'type': 'string'}\n",
         "model_to_save = os.path.splitext(model_to_load)[0]\n",
         "convert = \"checkpoint_to_diffusers\" #@param [\"diffusers_to_checkpoint\", \"checkpoint_to_diffusers\"] {'allow-input': false}\n",
         "v2 = False #@param {type:'boolean'}\n",
-        "global_step = 30000 #@param {'type': 'number'}\n",
-        "epoch = 120 #@param {'type': 'number'}\n",
+        "global_step = 0 #@param {'type': 'number'}\n",
+        "epoch = 0 #@param {'type': 'number'}\n",
         "use_safetensors = True #@param {'type': 'boolean'}\n",
         "save_precision = \"--float\" #@param [\"--fp16\",\"--bf16\",\"--float\"] {'allow-input': false}\n",
         "\n",
@@ -341,7 +341,7 @@
         "\n",
         "#@markdown You need to input model ends with `.ckpt`, because `.safetensors` model won't work.\n",
         "\n",
-        "target_model = \"/content/models/models_dir/anything-v3-3.ckpt\" #@param {'type': 'string'}\n",
+        "target_model = \"\" #@param {'type': 'string'}\n",
         "target_vae = \"/content/vae/anime.vae.pt\" #@param {'type': 'string'}\n",
         "use_safetensors = False #@param {type:'boolean'}\n",
         "# get the base file name and directory\n",
@@ -376,45 +376,56 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 2.4. Convert CKPT to Safetensors\n",
-        "os.chdir(tools_dir)\n",
+        "#@title 2.4. Convert CKPT-2-Safetensors\n",
         "\n",
-        "if not os.path.exists('convert_to_safetensors.py'):\n",
-        "  !wget https://raw.githubusercontent.com/Linaqruf/sd-notebook-collection/main/script/convert_to_safetensors.py\n",
+        "import os\n",
+        "import torch\n",
+        "from safetensors.torch import load_file, save_file\n",
+        "from torch import load, save\n",
         "\n",
+        "model_path = \"\" #@param {type: 'string'}\n",
         "\n",
-        "target_model = \"/content/models/models_dir/anything-v3-3.ckpt\" #@param {'type': 'string'}\n",
+        "def is_safetensors(path):\n",
+        "  return os.path.splitext(path)[1].lower() == '.safetensors'\n",
         "\n",
-        "!python convert_to_safetensors.py \\\n",
-        "  --input-model {target_model} \\\n",
-        "  --device gpu"
+        "def convert(model_path):\n",
+        "  print(\"Loading model:\", os.path.basename(model_path))\n",
+        "  \n",
+        "  try:\n",
+        "      with torch.no_grad():\n",
+        "          print(\"Conversion in progress, please wait...\")\n",
+        "          if is_safetensors(model_path):\n",
+        "            model = load_file(model_path, device=\"cpu\")\n",
+        "          else:\n",
+        "            model = load(model_path, map_location=\"cpu\")\n",
+        "          \n",
+        "          if 'state_dict' in model:\n",
+        "            sd = model['state_dict']\n",
+        "          else:\n",
+        "            sd = model\n",
+        "\n",
+        "          save_to = \".ckpt\" if is_safetensors(model_path) else \".safetensors\"\n",
+        "          output = os.path.splitext(model_path)[0] + save_to\n",
+        "\n",
+        "          if is_safetensors(model_path):\n",
+        "            save(sd, output)\n",
+        "          else:\n",
+        "            save_file(sd, output)\n",
+        "\n",
+        "      print(f'Successfully converted {os.path.basename(model_path)} to {os.path.basename(output)}')\n",
+        "      print(f'located in this path : {output}')\n",
+        "  except Exception as ex:\n",
+        "      print(f'ERROR converting {os.path.basename(model_path)}: {ex}')\n",
+        "\n",
+        "  print('Done!')\n",
+        "\n",
+        "def main():\n",
+        "  convert(model_path)\n",
+        "main()\n"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "e73cbbgIb2cd"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title 2.4. Convert CKPT to Safetensors\n",
-        "os.chdir(tools_dir)\n",
-        "\n",
-        "if not os.path.exists('convert_to_safetensors.py'):\n",
-        "  !wget https://raw.githubusercontent.com/Linaqruf/sd-notebook-collection/main/script/convert_to_safetensors.py\n",
-        "\n",
-        "\n",
-        "target_model = \"/content/models/models_dir/hitokomoru-v1-5.ckpt\" #@param {'type': 'string'}\n",
-        "\n",
-        "!python convert_to_safetensors.py \\\n",
-        "  --input-model {target_model} \\\n",
-        "  --device gpu"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "jiGMsn-VVa3V"
+        "id": "L8WI17pmnlVM"
       },
       "execution_count": null,
       "outputs": []
@@ -438,7 +449,7 @@
         "\n",
         "#@markdown Login to Huggingface Hub \n",
         "#@markdown > Get **your** huggingface `WRITE` token [here](https://huggingface.co/settings/tokens)\n",
-        "write_token = \"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\" #@param {type:\"string\"}\n",
+        "write_token = \"\" #@param {type:\"string\"}\n",
         "login(write_token, add_to_git_credential=True)\n",
         "\n",
         "api = HfApi()\n",
@@ -446,10 +457,10 @@
         "\n",
         "#@markdown Fill this if you want to upload to your organization, or just leave it empty.\n",
         "\n",
-        "orgs_name = \"cag\" #@param{type:\"string\"}\n",
+        "orgs_name = \"\" #@param{type:\"string\"}\n",
         "\n",
         "#@markdown If your model/dataset repo didn't exist, it will automatically create your repo.\n",
-        "model_name = \"anything-v3-3\" #@param{type:\"string\"}\n",
+        "model_name = \"\" #@param{type:\"string\"}\n",
         "make_this_model_private = False #@param{type:\"boolean\"}\n",
         "\n",
         "if orgs_name == \"\":\n",
@@ -489,17 +500,25 @@
       "source": [
         "#@title ### 8.2.1. Upload Model\n",
         "from huggingface_hub import HfApi\n",
+        "from huggingface_hub.utils import validate_repo_id, HfHubHTTPError\n",
         "from pathlib import Path\n",
         "\n",
         "api = HfApi()\n",
         "\n",
         "#@markdown This will be uploaded to model repo\n",
         "\n",
-        "model_path = \"/content/models/models_dir/anything-v3-3\" #@param {type :\"string\"}\n",
+        "model_path = \"/content/models/anything-v3-1.ckpt\" #@param {type :\"string\"}\n",
         "path_in_repo = \"\" #@param {type :\"string\"}\n",
-        "\n",
+        "revision = \"\" #@param {type :\"string\"}\n",
+        "if revision:\n",
+        "  api.create_branch(repo_id=model_repo, \n",
+        "                branch=revision, \n",
+        "                exist_ok=True)\n",
+        "else:\n",
+        "  revision = \"main\"\n",
         "#@markdown Other Information\n",
         "commit_message = \"\" #@param {type :\"string\"}\n",
+        "\n",
         "\n",
         "if os.path.exists(model_path):\n",
         "  vae_exists = os.path.exists(os.path.join(model_path, 'vae'))\n",
@@ -524,6 +543,7 @@
         "      api.upload_folder(\n",
         "          folder_path=model_paths,\n",
         "          repo_id=model_repo,\n",
+        "          revision=revision,\n",
         "          commit_message=commit_message,\n",
         "          ignore_patterns=\".ipynb_checkpoints\"\n",
         "          )\n",
@@ -536,6 +556,7 @@
         "          folder_path=model_paths,\n",
         "          path_in_repo=trained_model,\n",
         "          repo_id=model_repo,\n",
+        "          revision=revision,\n",
         "          commit_message=commit_message,\n",
         "          ignore_patterns=\".ipynb_checkpoints\"\n",
         "          )\n",
@@ -553,6 +574,7 @@
         "        path_or_fileobj=model_paths,\n",
         "        path_in_repo=trained_model,\n",
         "        repo_id=model_repo,\n",
+        "        revision=revision,\n",
         "        commit_message=commit_message,\n",
         "        )\n",
         "        \n",
@@ -586,7 +608,7 @@
       "cell_type": "code",
       "source": [
         "#@title ### 8.3.1. Clone Repository\n",
-        "\n",
+        "%cd /content/\n",
         "clone_model = True #@param {'type': 'boolean'}\n",
         "\n",
         "!git lfs install --skip-smudge\n",
